2012-02-02  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-read-ephemeral-group): Don't add a new
	address parameter if one already exists (bug#9676).

	* gnus-msg.el (gnus-summary-mail-forward): Respect the process marks,
	not the prefix, as documented (bug#10689).

2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-valid-select-methods): nnmaildir also saves marks in
	the "server".

	* gnus-group.el (gnus-group-get-new-news-this-group): Don't overwrite
	the real error message with the useless "previously known to be down".
	Which isn't even correct.

	* nntp.el (nntp-open-connection): Report the error message if the nntp
	server can't be reached.

	* nnimap.el (nnimap-retrieve-group-data-early): Keep track of how many
	groups we do a total scan for.
	(nnimap-wait-for-response): Say that we're doing a total scan, if we're
	doing that.

2012-01-31  Jim Meyering  <jim@meyering.net>

	* gnus-agent.el (gnus-agent-expire-unagentized-dirs):
        Correct a comment (insert "not") and hide nominally-doubled "to".

2012-01-31  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: No Gnus v0.19 is released.

2012-01-30  Philipp Haselwarter  <philipp.haselwarter@gmx.de>  (tiny change)

	* gnus-agent.el (gnus-agent-auto-agentize-methods): Point to the Agent
	section in the manual.

2012-01-30  Lars Ingebrigtsen  <larsi@gnus.org>

	* rfc2047.el (rfc2047-encode-region): Allow not folding the encoded
	words.
	(rfc2047-encode-string): Ditto.
	(rfc2047-encode-parameter): Don't fold parameters.  Some MUAs do not
	understand folded filename="..." parameters, for instance.

	* nnimap.el (nnimap-wait-for-response): Include the imap server name in
	the message for greater debuggability.

2012-01-28  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-display-inline-fontify): Bind `font-lock-support-mode'
	instead of setting it locally, since the latter doesn't seem to have
	any effect (most of the time).
